# gpui-animation

./: Cargo.toml  README.md
examples/: button.rs  hover.rs  hover_color.rs  hover_position.rs
src/: animation.rs  interpolate.rs  lib.rs  transition.rs
src/transition/: color.rs  general.rs
