[package]
name = "gpui-animation"
version = "0.1.8"
authors = ["ch1ll321 <earlysun.984190929@gmail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["gpui", "animation", "ui", "transition"]
categories = ["gui", "rendering"]
edition = "2024"

[dependencies]
gpui = "0.2.2"
parking_lot = "0.12.5"
smol = "2.0.2"
