[package]
name = "gpui-animation"
version = "0.2.4"
authors = ["ch1ll321 <earlysun.984190929@gmail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["gpui", "animation", "ui", "transition"]
description  = "A lightweight and fluent animation wrapper for GPUI, enabling smooth state-driven transitions with minimal boilerplate."
repository = "https://github.com/chi11321/gpui-animation"
readme = "README.md"
categories = ["gui", "rendering"]
edition = "2024"

[dependencies]
dashmap = "6.1.0"
gpui = { package = "gpui-ce", git = "https://github.com/vmg-dev/gpui-ce", rev = "de080b0773f832eaa011740d62e0840cca0203ba" }
parking_lot = "0.12.5"
smol = "2.0.2"
